--- a/META.yml
+++ b/META.yml
@@ -19,6 +19,7 @@ no_index:
     - t
     - xt
 requires:
+  DateTime: 0
   File::Find::Rule: 0
   File::Spec: 0
   Getopt::Long: 0
@@ -28,4 +29,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/c9s/App-cpanbaker.git
-version: 0.01
+version: 0.02
