Import of CORNELIUS/App-cpanbaker-0.05 from CPAN.
gitpan-cpan-distribution: App-cpanbaker
gitpan-cpan-version:      0.05
gitpan-cpan-path:         CORNELIUS/App-cpanbaker-0.05.tar.gz
gitpan-cpan-author:       CORNELIUS
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -20,6 +20,7 @@ no_index:
     - xt
 requires:
   DateTime: 0
+  ExtUtils::Installed: 0
   File::Find::Rule: 0
   File::Spec: 0
   Getopt::Long: 0
@@ -29,4 +30,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: git://github.com/c9s/App-cpanbaker.git
-version: 0.04
+version: 0.05
